[package]
name = "nucleo-h743zi2"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Boilerplate for the Nucleo-H743ZI2 development board."

[badges]
maintenance = { status = "experimental" }

[dependencies]
rtt-target = "~0.3.1"
cortex-m = "~0.7.3"
cortex-m-rt = "~0.6.15"

[dependencies.panic-rtt-target]
version = "~0.1.2"
features = ["cortex-m"]

[dependencies.stm32h7xx-hal]
version = "~0.9.0"
features = ["stm32h743"]
