[package]
name = "nucleo-h743zi2"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Boilerplate for the Nucleo-H743ZI2 development board."

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt" ] }

[dependencies.stm32h7xx-hal]
version = "0.11"
features = ["stm32h743", "rt", "unproven"]
default-features = false
